--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,8 @@
 		<tr>
 			<td><%= article.title %></td>
 			<td><%= article.text %></td>
-			<td><%= link_to 'Show', article_path(article) %></td>
+			<!-- 'link_to' is one of Rails' built-in view helpers. It creates a hyperlink based on text to display and where to go. -->
+			<td><%= link_to 'Show', article_path(article) %></td> 
 		</tr>
 	<% end %>
 </table>
