--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,6 +13,7 @@
 			<td><%= article.text %></td>
 			<!-- 'link_to' is one of Rails' built-in view helpers. It creates a hyperlink based on text to display and where to go. -->
 			<td><%= link_to 'Show', article_path(article) %></td> 
+			<td><%= link_to 'Edit', edit_article_path(article) %></td> 
 		</tr>
 	<% end %>
 </table>
