--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,5 +9,4 @@
 </p>
 
 <%= link_to 'Back', articles_path %>
-<%= link_to 'Show', article_path(article) %>
-<%= link_to 'Edit', edit_article_path(article) %>
+<%= link_to 'Edit', edit_article_path(@article) %>
