--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,3 +10,18 @@
 
 <%= link_to 'Back', articles_path %>
 <%= link_to 'Edit', edit_article_path(@article) %>
+
+<h2>Add a comment:</h2>
+<%= form_with(model: [ @article.comments.build ], local: true) do |form| %>
+	<p>
+		<%= form.label :commenter %><br>
+		<%= form.text_field :commenter %>
+	</p>
+	<p>
+		<%= form.label :body %><br>
+		<%= form.text_area :body %>
+	</p>
+	<p>
+		<%= form.submit %>
+	</p>
+<% end %>
