--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,14 +12,7 @@
 <%= link_to 'Edit', edit_article_path(@article) %>
 
 <h2>Comments</h2>
-<% @article.comments.each do |comment| %>
-	<p>
-		<strong>Commenter:</strong><%= comment.commenter %>
-	</p>
-	<p>
-		<strong>Comment:</strong><%= comment.body %>
-	</p>
-<% end %>
+	<%= render @article.comments %> <!-- render comments according to the '_comments.html.erb' template -->
 
 <h2>Add a comment:</h2>
 <%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
