--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,3 +4,7 @@
 	<p>
 		<strong>Comment:</strong><%= comment.body %>
 </p>
+
+<p>
+	<%= link_to 'Destroy Comment', [comment.article, comment], method: :delete, data: { confirm: 'Are you sure?' } %>
+</p>
